app/assets/stylesheets/application.scss
@import "bootstrap-sprockets";
@import "bootstrap";

/*backdrop */

body { 

  background: url(red_background.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='http://media02.hongkiat.com/oversized-background-image-design/bg.jpg', sizingMethod='scale')";
  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.http://media02.hongkiat.com/oversized-background-image-design/bg.jpg', sizingMethod='scale');
}

#push_down{
	position:absolute;
	width: 100%;
}
#background-pallette {
	position: relative;
	margin-top: 20px;
	width:90%;
	margin-left: auto;
	margin-right: auto;
	overflow:hidden;
	float:center;
	background-color: black;

}

#background-screen{
	width: auto;	
	background-color: #FFFFF2;
	margin-bottom: 10px;
	margin-right: 10px;
	margin-left: 10px;
	margin-top: 10px;
}
/*
#background_tab{
	background-color: #FFE4C4;
	margin-bottom: 10px;
	margin-right: 10px;
	margin-left: 10px;
	margin-top: 10px;
	background-opacity: 0.5;
}
*/
/* Scrolling Photos */
#main_photo {
	width: 100%;
	height: auto;
	border-color: black;
	border-style: solid;
	border-width: 5px;
}
p {
	color: black;
}
/* Header */
#header_container{
	margin-top: 20px;
	text-align: center;
}


#header_list li {
	display: inline;
	font-size: 20pt;
	margin-left: 4%;
	margin-right: 4%;
}

a{
	color: black;
	&:hover{
		color: black;
		text-decoration: none;
	}

}



footer {
	height: 100px;
}

#logo_container{
	text-align: center;
	padding-top: 10px;
	padding-bottom: 10px;
}

/* Services */
.service_photos{
	width: 24%;
	height: 100%;
	margin-left: 0;
	margin-right: 0;
	border-style: solid;
	border-color: black;
	border-width: 2px;
	opacity: 0.6;
}

.selected_service_photo {
	width: 24%;
	height: 100%;
	margin-left: 0;
	margin-right: 0;
	border-style: solid;
	border-color: black;
	border-width: 2px;


}

#services_container{
	margin-top: 30px;
	width: 100%;

	/*
	border-color: gray;
	border-width: 5px;
	border-style: solid;
	border-radius: 25px;
	padding-top: 10px;
	*/
	
}

#services_container ul li{
	display: inline;
}

#services_container ul {
	height: 175px;
}

/* Service Descriptions */

.service_head {
	margin-top: 30px;
	margin-bottom: 30px;
	margin-left: 10%;
	font-weight: bold;
	font-size: 30pt;
}

.service_description {
	margin-left: 10%;
	margin-right: 10%;
	text-indent: 50px;
	font-family: serif;
	font-size: 16pt
}
.service_overview{
	display: none;
}




/*experiment */

.faded_out{
	display: none;
}
.selected{}

hr {
  border:none;
  border-top:2px dotted #f00;
  color:#fff;
  background-color:#fff;
  height:1px;
  width:75%;
}
/* About Us */

#all_about_us_container{
	margin-top: 50px;
}

/* Map */

#map_holder {
	margin-top: 60px;
	text-align: center;
	display: inline;
	width: 100%;
}

#first_map{
	width: 45%;
	float: left;
	margin-left: 2.5%;


}
#second_map{
	width:45%;
	float: right;
	margin-right: 2.5%;
}

h2{
	font-weight: bold;
	margin-bottom: 20px;
}
.outline_map{
	border-width: 1px;
	border-style: solid;
	border-radius: 2px;
	border-color: #DC143C;
}
iframe{
	width: 100%;

}

